— Geolocation integration based on Joey Devilla's example: http://www.globalnerdy.com/2016/05/16/how-to-build-an-ios-weather-app-in-swift-part-5-putting-it-all-together/ — Current weather info fetching based on location — Suggesting outfit to user according to current weather (very basic version)

--- a/styleUP/Info.plist
+++ b/styleUP/Info.plist
@@ -32,5 +32,14 @@
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
 	</array>
+	<key>LSApplicationCategoryType</key>
+	<string></string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string> order to show you your coordinates, this app needs access to this device’s location abilities. This information won’t be shared with anyone.</string>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
 </dict>
 </plist>
